@@ -1,3 +1,4 @@
+Water tab: Fixed: when dropping a Na+ or Cl- crystal outside the play area it should go back to the play area
 Micro tab: Moved the faucet further from the beaker
 Water tab: Increased bucket size to accommodate new compound sizes
 Water tab: Moved the reset all button below the control panel and colored like other tabs
